HouseHogPackage/main/default/objects/Prospect__c/Prospect__c.object-meta.xml
<CustomObject>
    <description>An Account&apos;s interest in a Home.</description>
    <label>Prospect</label>
    <nameField>
        <displayFormat>Prospect-{000000}</displayFormat>
        <label>Prospect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>