HouseHogPackage/main/default/objects/Prospect__c/fields/Counter_Offer__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer__c</fullName>
    <label>Counter Offer</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>