HouseHogPackage/main/default/objects/Prospect__c/fields/Favorited_Date__c.field-meta.xml
<CustomField>
    <fullName>Favorited_Date__c</fullName>
    <label>Favorited Date</label>
    <type>Date</type>
</CustomField>