HouseHogPackage/main/default/objects/Prospect__c/fields/Purchasing_Realtor__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Realtor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Realtor representing the Account who wants to buy the home.</description>
    <label>Purchasing_Realtor</label>
    <referenceTo>Realtor__c</referenceTo>
    <relationshipLabel>Purchase Prospects</relationshipLabel>
    <relationshipName>Purchase_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>