HouseHogPackage/main/default/objects/Prospect__c/fields/Selling_Agency__c.field-meta.xml
<CustomField>
    <fullName>Selling_Agency__c</fullName>
    <formula>Selling_Realtor__r.Agency__r.Name</formula>
    <label>Selling Agency</label>
    <type>Text</type>
</CustomField>