HouseHogPackage/main/default/objects/Prospect__c/fields/Selling_Realtor__c.field-meta.xml
<CustomField>
    <fullName>Selling_Realtor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Realtor</label>
    <referenceTo>Realtor__c</referenceTo>
    <relationshipLabel>Sale Prospects</relationshipLabel>
    <relationshipName>Sale_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>