HouseHogPackage/main/default/objects/Prospect__c/listViews/Prospect_Details.listView-meta.xml
<ListView>
    <fullName>Prospect_Details</fullName>
    <columns>NAME</columns>
    <columns>Selling_Realtor__c</columns>
    <columns>Status__c</columns>
    <columns>Purchasing_Realtor__c</columns>
    <columns>Property__c</columns>
    <columns>Account__c</columns>
    <filterScope>Mine</filterScope>
    <label>Prospect Details</label>
</ListView>